k-carousel-cfn.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This Cloudformation Template was written for running Kittens Carousel Static Website on EC2. This website will be deployed on Linux 2 (ami-0022f774911c1d690) EC2 instance with custom security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static website is dowloaded from Public Github repository, then deployed on Apache Web Server
Parameters:
  
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server an SSH forsecure connection # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  LogicalID:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0022f774911c1d690
      InstanceType: t2.micro
      KeyName: my-key
      SecurityGroupIds:
        !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData:
        Fn::Base64
          !Sub |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            FOLDER="https://raw.githubusercontent.com/YY4411/k-carousel/master/static-web"
            cd /var/www/html
            wget $FOLDER/index.html
            wget $FOLDER/cat0.jpg
            wget $FOLDER/cat1.jpg
            wget $FOLDER/cat2.jpg
            wget $FOLDER/cat3.png
            systemctl start httpd
            systemctl enable httpd
  
Outputs:
  WebsiteURL:
  Value: !Sub 
    - http://${PublicAddress}
    - PublicAdress: !GetAtt WebServerHost.PublicDnsName
  Description: Kittens Carousel Application URL
